# moongoose

./: .gitignore  README.md
arduino/: goose_muscles.ino
arduino/goose_muscles/: goose_muscles.ino
config/nginx/: goose
frontend/js/: app.min.js
frontend/js/src/: pagination.js  stream.js
frontend/scss/: _settings.scss
frontgoose/: gulpfile.js  index.html  package.json  update_foundation.sh
frontgoose/css/: app.css  app.min.css  styles.css
frontgoose/js/: app.js  app.min.js  controls.js  pagination.js  stream.js
frontgoose/js/src/: controls.js  swipe_menu.js
frontgoose/scss/: _settings.scss  main.scss
goose_brain/: CMakeLists.txt  main.cpp
goose_brains/: CMakeLists.txt  arduino_commands.cpp  arduino_commands.h  command.h  command_dispatcher.cpp  command_dispatcher.h  defaults.h  goose_brains.cpp  goose_brains.h  keyboard_controller.cpp  keyboard_controller.h  main.cpp  motion_controller.cpp  motion_controller.h  motion_state.h  start.py  start_left.py  stop_all.py
network/: configure.sh  install_toggle_network_daemon.sh  toggle_network.py  toggle_network.sh
network/access_point/: dhcpd.conf  hostapd.conf  interfaces
network/local_network/: interfaces
scripts/: run_mjpg_streamer.sh  test_pwm.py
