cmake_minimum_required(VERSION 2.8)
project(goose_brains)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
include_directories(websocketpp)
add_executable(goose_brains main.cpp goose_brains.cpp arduino_commands.cpp motion_controller.cpp command_dispatcher.cpp command.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lcrypto -lssl -lboost_system")
target_link_libraries(goose_brains ${OpenCV_LIBS})
